@@ -19,53 +19,32 @@ package org.apache.camel.maven.packaging;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.Reader;
-import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.AnnotatedElement;
-import java.lang.reflect.Array;
 import java.lang.reflect.Field;
 import java.lang.reflect.Member;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
-import java.lang.reflect.Type;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
-import java.util.LinkedHashMap;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
-import java.util.SortedMap;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jakarta.xml.bind.annotation.XmlAccessType;
-import jakarta.xml.bind.annotation.XmlAccessorType;
-import jakarta.xml.bind.annotation.XmlAnyAttribute;
-import jakarta.xml.bind.annotation.XmlAnyElement;
-import jakarta.xml.bind.annotation.XmlAttribute;
-import jakarta.xml.bind.annotation.XmlElement;
-import jakarta.xml.bind.annotation.XmlElementRef;
-import jakarta.xml.bind.annotation.XmlElementWrapper;
-import jakarta.xml.bind.annotation.XmlElements;
-import jakarta.xml.bind.annotation.XmlEnum;
-import jakarta.xml.bind.annotation.XmlRootElement;
-import jakarta.xml.bind.annotation.XmlTransient;
-import jakarta.xml.bind.annotation.XmlType;
-import jakarta.xml.bind.annotation.XmlValue;
+import jakarta.xml.bind.annotation.*;
 import jakarta.xml.bind.annotation.adapters.XmlAdapter;
 import jakarta.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 
 import org.apache.camel.maven.packaging.generics.JandexStore;
 import org.apache.camel.spi.annotations.ExternalSchemaElement;
 import org.apache.camel.tooling.util.srcgen.GenericType;
-import org.apache.camel.tooling.util.srcgen.JavaClass;
 import org.apache.maven.artifact.DependencyResolutionRequiredException;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
@@ -88,10 +67,9 @@ import org.jboss.jandex.IndexReader;
  */
 @Mojo(name = "generate-xml-parser", threadSafe = true, requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME,
       defaultPhase = LifecyclePhase.PROCESS_CLASSES)
+@SuppressWarnings("unused")
 public class ModelXmlParserGeneratorMojo extends AbstractGeneratorMojo {
 
-    public static final String XML_PARSER_PACKAGE = "org.apache.camel.xml.io";
-    public static final String XML_PULL_PARSER_EXCEPTION = XML_PARSER_PACKAGE + ".XmlPullParserException";
     public static final String PARSER_PACKAGE = "org.apache.camel.xml.in";
     public static final String MODEL_PACKAGE = "org.apache.camel.model";
 
@@ -102,16 +80,6 @@ public class ModelXmlParserGeneratorMojo extends AbstractGeneratorMojo {
     protected boolean generateXmlParser;
 
     private Class<?> outputDefinitionClass;
-    private Class<?> expressionDefinitionClass;
-    private Class<?> routesDefinitionClass;
-    private Class<?> routeConfigurationsDefinitionClass;
-    private Class<?> routeTemplatesDefinitionClass;
-    private Class<?> templatedRoutesDefinitionClass;
-    private Class<?> restsDefinitionClass;
-    private Class<?> processorDefinitionClass;
-    private Class<?> dataFormatDefinitionClass;
-    private Class<?> beansDefinitionClass;
-    private Class<?> applicationDefinitionClass;
 
     @Override
     public void execute(MavenProject project, MavenProjectHelper projectHelper, BuildContext buildContext)
@@ -140,18 +108,8 @@ public class ModelXmlParserGeneratorMojo extends AbstractGeneratorMojo {
         }
 
         outputDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".OutputDefinition");
-        routesDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".RoutesDefinition");
-        routeConfigurationsDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".RouteConfigurationsDefinition");
-        routeTemplatesDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".RouteTemplatesDefinition");
-        templatedRoutesDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".TemplatedRoutesDefinition");
-        dataFormatDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".DataFormatDefinition");
-        processorDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".ProcessorDefinition");
-        restsDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".rest.RestsDefinition");
-        expressionDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".language.ExpressionDefinition");
-        beansDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".app.BeansDefinition");
-        applicationDefinitionClass = loadClass(classLoader, MODEL_PACKAGE + ".app.ApplicationDefinition");
 
-        String resName = routesDefinitionClass.getName().replace('.', '/') + ".class";
+        String resName = outputDefinitionClass.getName().replace('.', '/') + ".class";
         String url = classLoader.getResource(resName).toExternalForm().replace(resName, JandexStore.DEFAULT_NAME);
         Index index;
         try (InputStream is = new URL(url).openStream()) {
@@ -167,26 +125,16 @@ public class ModelXmlParserGeneratorMojo extends AbstractGeneratorMojo {
                 .filter(n -> !n.equals("org.apache.camel.model.WhenSkipSendToEndpointDefinition"))
                 .map(name -> loadClass(classLoader, name))
                 .flatMap(this::references).flatMap(this::fieldReferences).distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        JavaClass parser = generateParser(model, classLoader);
-        return "/*\n" + " * Licensed to the Apache Software Foundation (ASF) under one or more\n"
-               + " * contributor license agreements.  See the NOTICE file distributed with\n"
-               + " * this work for additional information regarding copyright ownership.\n"
-               + " * The ASF licenses this file to You under the Apache License, Version 2.0\n"
-               + " * (the \"License\"); you may not use this file except in compliance with\n"
-               + " * the License.  You may obtain a copy of the License at\n" + " *\n"
-               + " *      http://www.apache.org/licenses/LICENSE-2.0\n" + " *\n"
-               + " * Unless required by applicable law or agreed to in writing, software\n"
-               + " * distributed under the License is distributed on an \"AS IS\" BASIS,\n"
-               + " * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n"
-               + " * See the License for the specific language governing permissions and\n"
-               + " * limitations under the License.\n" + " */\n"
-               + "\n/**\n * Generated by Camel build tools - do NOT edit this file!\n */\n"
-               + parser.printClass() + "\n";
+        Map<String, Object> ctx = new HashMap<>();
+        ctx.put("mojo", this);
+        ctx.put("model", model.stream().map(ClassWrapper::new).toList());
+        ctx.put("package", "org.apache.camel.xml.in");
+        return velocity("velocity/model-parser.vm", ctx);
     }
 
-    protected Class<?> loadClass(ClassLoader loader, String name) {
+    private Class<?> loadClass(ClassLoader loader, String name) {
         try {
             return loader.loadClass(name);
         } catch (ClassNotFoundException e) {
@@ -217,556 +165,6 @@ public class ModelXmlParserGeneratorMojo extends AbstractGeneratorMojo {
                 }).map(GenericType::new).map(t -> t.getRawClass() == List.class ? t.getActualTypeArgument(0) : t)
                         .map(GenericType::getRawClass)
                         .filter(c -> c.getName().startsWith("org.apache.camel.")));
-    }
-
-    private JavaClass generateParser(List<Class<?>> model, ClassLoader classLoader) {
-        JavaClass parser = new JavaClass(classLoader);
-        parser.setMaxImportPerPackage(4);
-        parser.setPackage(PARSER_PACKAGE);
-        parser.setName("ModelParser");
-        parser.extendSuperType("BaseParser");
-        parser.addImport(MODEL_PACKAGE + ".OptionalIdentifiedDefinition");
-        parser.addImport(IOException.class);
-        parser.addImport(XML_PULL_PARSER_EXCEPTION);
-        parser.addImport(Array.class);
-        parser.addImport(List.class);
-        parser.addImport(ArrayList.class);
-        parser.addImport(org.w3c.dom.Element.class);
-        parser.addAnnotation(SuppressWarnings.class).setLiteralValue("\"unused\"");
-        parser.addMethod().setConstructor(true).setPublic().setName("ModelParser")
-                .addParameter("org.apache.camel.spi.Resource", "input").addThrows(IOException.class)
-                .addThrows(XML_PULL_PARSER_EXCEPTION).setBody("super(input);");
-        parser.addMethod().setConstructor(true).setPublic().setName("ModelParser")
-                .addParameter("org.apache.camel.spi.Resource", "input").addParameter(String.class, "namespace")
-                .addThrows(IOException.class).addThrows(XML_PULL_PARSER_EXCEPTION).setBody("super(input, namespace);");
-        parser.addMethod().setConstructor(true).setPublic().setName("ModelParser").addParameter(InputStream.class, "input")
-                .addThrows(IOException.class)
-                .addThrows(XML_PULL_PARSER_EXCEPTION).setBody("super(input);");
-        parser.addMethod().setConstructor(true).setPublic().setName("ModelParser").addParameter(Reader.class, "reader")
-                .addThrows(IOException.class)
-                .addThrows(XML_PULL_PARSER_EXCEPTION).setBody("super(reader);");
-        parser.addMethod().setConstructor(true).setPublic().setName("ModelParser").addParameter(InputStream.class, "input")
-                .addParameter(String.class, "namespace")
-                .addThrows(IOException.class).addThrows(XML_PULL_PARSER_EXCEPTION).setBody("super(input, namespace);");
-        parser.addMethod().setConstructor(true).setPublic().setName("ModelParser").addParameter(Reader.class, "reader")
-                .addParameter(String.class, "namespace")
-                .addThrows(IOException.class).addThrows(XML_PULL_PARSER_EXCEPTION).setBody("super(reader, namespace);");
-
-        List<Class<?>> elementRefs
-                = Arrays.asList(processorDefinitionClass, expressionDefinitionClass, dataFormatDefinitionClass);
-
-        for (Class<?> clazz : model) {
-            if (clazz.getAnnotation(XmlEnum.class) != null || clazz.isInterface()) {
-                continue;
-            }
-            String name = clazz.getSimpleName();
-            String qname;
-            if (clazz.getDeclaringClass() != null) {
-                parser.addImport(clazz.getDeclaringClass());
-                qname = clazz.getDeclaringClass().getSimpleName() + "." + name;
-            } else {
-                parser.addImport(clazz);
-                qname = name;
-            }
-            boolean hasDerived = model.stream().anyMatch(cl -> cl.getSuperclass() == clazz);
-
-            List<Member> members = getMembers(clazz);
-
-            // XmlAttribute
-            List<Member> attributeMembers
-                    = members.stream().filter(member -> ((AccessibleObject) member).getAnnotation(XmlAttribute.class) != null)
-                            .toList();
-            String baseAttributeHandler = null;
-            for (Class<?> parent = clazz.getSuperclass(); parent != Object.class; parent = parent.getSuperclass()) {
-                if (getMembers(parent).stream()
-                        .anyMatch(member -> ((AccessibleObject) member).getAnnotation(XmlAttribute.class) != null)) {
-                    baseAttributeHandler = lowercase(parent.getSimpleName()) + "AttributeHandler()";
-                    break;
-                }
-            }
-            String attributes;
-            if (attributeMembers.isEmpty()) {
-                attributes = "\n    " + (baseAttributeHandler != null ? baseAttributeHandler : "noAttributeHandler()");
-            } else {
-                SortedMap<String, String> cases = new TreeMap<>();
-                for (Member member : attributeMembers) {
-                    Type pt = member instanceof Method
-                            ? ((Method) member).getGenericParameterTypes()[0] : ((Field) member).getGenericType();
-                    GenericType type = new GenericType(pt);
-                    String mn = member.getName();
-                    String an = ((AccessibleObject) member).getAnnotation(XmlAttribute.class).name();
-                    if ("##default".equals(an)) {
-                        an = member instanceof Method ? propname(mn) : mn;
-                    }
-                    String sn = member instanceof Method ? mn : "set" + uppercase(mn);
-                    cases.put(an, "def." + sn + "(" + conversion(parser, type, "val", clazz.getName()) + ");");
-                }
-                String defaultCase = baseAttributeHandler != null ? baseAttributeHandler + ".accept(def, key, val)" : "false";
-                if (attributeMembers.size() == 1) {
-                    Map.Entry<String, String> entry = cases.entrySet().iterator().next();
-                    attributes = " (def, key, val) -> {\n" + "    if (\"" + entry.getKey() + "\".equals(key)) {\n" + "        "
-                                 + entry.getValue() + "\n" + "        return true;\n"
-                                 + "    }\n" + "    return " + defaultCase + ";\n" + "}";
-                } else {
-                    attributes = generateCases(cases, defaultCase);
-                }
-            }
-
-            // @XmlAnyAttribute
-            members.stream().filter(member -> ((AccessibleObject) member).getAnnotation(XmlAnyAttribute.class) != null)
-                    .forEach(member -> {
-                        if (!"otherAttributes".equals(member.getName())) {
-                            throw new UnsupportedOperationException(
-                                    "Class " + clazz.getName() + " / member " + member + ": unsupported @XmlAnyAttribute");
-                        }
-                    });
-
-            // @XmlElementRef @XmlElement @XmlElements
-            List<Member> elementMembers
-                    = members.stream().filter(member -> ((AccessibleObject) member).getAnnotation(XmlAttribute.class) == null)
-                            .filter(member -> ((AccessibleObject) member).getAnnotation(XmlAnyAttribute.class) == null)
-                            .filter(member -> ((AccessibleObject) member).getAnnotation(XmlValue.class) == null)
-                            .toList();
-            List<Member> multiElements = members.stream()
-                    .filter(member -> ((AccessibleObject) member).getAnnotation(XmlElementRef.class) != null
-                            || ((AccessibleObject) member).getAnnotation(XmlElements.class) != null
-                            || (clazz == outputDefinitionClass && "setOutputs".equals(member.getName())))
-                    .toList();
-            Map<String, String> expressionHandlersDefs = new LinkedHashMap<>();
-            Map<String, String> cases = new LinkedHashMap<>();
-            // to handle elements from external namespaces
-            List<String[]> externalNamespaces = new ArrayList<>();
-            // XmlElementRef
-            elementMembers.stream().filter(member -> ((AccessibleObject) member).getAnnotation(XmlElementRef.class) != null
-                    || (clazz == outputDefinitionClass && "setOutputs".equals(member.getName())))
-                    .forEach(member -> {
-                        Type pt = member instanceof Method
-                                ? ((Method) member).getGenericParameterTypes()[0] : ((Field) member).getGenericType();
-                        GenericType type = new GenericType(pt);
-                        boolean list = type.getRawClass() == List.class;
-                        String fn = member.getName();
-                        String sn = member instanceof Method ? fn : "set" + uppercase(fn);
-                        String gn = member instanceof Method ? "g" + sn.substring(1) : "get" + uppercase(fn);
-                        Class<?> root = list ? type.getActualTypeArgument(0).getRawClass() : type.getRawClass();
-                        if (elementRefs.contains(root)) {
-                            expressionHandlersDefs.put(lowercase(sn.substring(3)),
-                                    "    " + root.getSimpleName() + " v = doParse" + root.getSimpleName() + "Ref(key);\n"
-                                                                                   + "    if (v != null) { \n" + "        "
-                                                                                   + (list
-                                                                                           ? "doAdd(v, def." + gn + "(), def::"
-                                                                                             + sn + ");"
-                                                                                           : "def." + sn + "(v);")
-                                                                                   + "\n"
-                                                                                   + "        return true;\n" + "    }\n");
-                        } else {
-                            model.stream().filter(root::isAssignableFrom)
-                                    .filter(cl -> cl.getAnnotation(XmlRootElement.class) != null).forEach(cl -> {
-                                        String en = cl.getAnnotation(XmlRootElement.class).name();
-                                        if ("##default".equals(en)) {
-                                            en = lowercase(cl.getSimpleName());
-                                        }
-                                        String tn = cl.getSimpleName();
-                                        cases.put(en,
-                                                list
-                                                        ? "doAdd(doParse" + tn + "(), def." + gn + "(), def::" + sn + ");"
-                                                        : "def." + sn + "(doParse" + tn + "());");
-                                    });
-                        }
-                    });
-            // @XmlElements
-            elementMembers.stream().filter(member -> ((AccessibleObject) member).getAnnotation(XmlElements.class) != null)
-                    .forEach(member -> {
-                        Type pt = member instanceof Method
-                                ? ((Method) member).getGenericParameterTypes()[0] : ((Field) member).getGenericType();
-                        GenericType type = new GenericType(pt);
-                        boolean list = type.getRawClass() == List.class;
-                        String fn = member.getName();
-                        String sn = member instanceof Method ? fn : "set" + uppercase(fn);
-                        String gn = member instanceof Method ? "g" + sn.substring(1) : "get" + uppercase(fn);
-                        Class<?> root = list ? type.getActualTypeArgument(0).getRawClass() : type.getRawClass();
-                        if (elementRefs.contains(root)) {
-                            expressionHandlersDefs.put(lowercase(sn.substring(3)),
-                                    "    " + root.getSimpleName() + " v = doParse" + root.getSimpleName() + "Ref(key);\n"
-                                                                                   + "    if (v != null) { \n" + "        "
-                                                                                   + (list
-                                                                                           ? "doAdd(v, def." + gn + "(), def::"
-                                                                                             + sn + ");"
-                                                                                           : "def." + sn + "(v);")
-                                                                                   + "\n"
-                                                                                   + "        return true;\n" + "    }\n");
-                        } else {
-                            Stream.of(((AccessibleObject) member).getAnnotation(XmlElements.class).value()).forEach(xe -> {
-                                String en = xe.name();
-                                String tn = xe.type().getSimpleName();
-                                cases.put(en,
-                                        list
-                                                ? "doAdd(doParse" + tn + "(), def." + gn + "(), def::" + sn + ");"
-                                                : "def." + sn + "(doParse" + tn + "());");
-                            });
-                        }
-                    });
-            elementMembers.stream().filter(member -> !multiElements.contains(member)).forEach(member -> {
-                Type pt = member instanceof Method
-                        ? ((Method) member).getGenericParameterTypes()[0] : ((Field) member).getGenericType();
-                GenericType type = new GenericType(pt);
-                boolean list;
-                Class<?> root;
-                if (type.getRawClass() == List.class) {
-                    list = true;
-                    root = type.getActualTypeArgument(0).getRawClass();
-                } else if (type.getRawClass().isArray()) {
-                    list = true;
-                    root = type.getRawClass().getComponentType();
-                } else {
-                    list = false;
-                    root = type.getRawClass();
-                }
-                String fn = member.getName();
-                String en = "##default";
-                if (((AccessibleObject) member).getAnnotation(XmlElement.class) != null) {
-                    en = ((AccessibleObject) member).getAnnotation(XmlElement.class).name();
-                    // special for value which can be wrapped
-                    if ("value".equals(en)) {
-                        if (((AccessibleObject) member).getAnnotation(XmlElementWrapper.class) != null) {
-                            en = ((AccessibleObject) member).getAnnotation(XmlElementWrapper.class).name();
-                        }
-                    }
-                }
-                if ("##default".equals(en)) {
-                    en = member instanceof Method ? propname(fn) : fn;
-                }
-                String sn = member instanceof Method ? fn : "set" + uppercase(fn);
-                String gn = member instanceof Method ? "g" + sn.substring(1) : "get" + uppercase(fn);
-                String tn = root.getSimpleName();
-                String pc;
-                if (((AccessibleObject) member).getAnnotation(XmlJavaTypeAdapter.class) != null) {
-                    Class<? extends XmlAdapter> adapter
-                            = ((AccessibleObject) member).getAnnotation(XmlJavaTypeAdapter.class).value();
-                    Class<?> cl = adapter;
-                    while (cl.getSuperclass() != XmlAdapter.class) {
-                        cl = cl.getSuperclass();
-                    }
-                    Type t = ((ParameterizedType) cl.getGenericSuperclass()).getActualTypeArguments()[0];
-                    Class<?> c = new GenericType(t).getRawClass();
-                    String n = adapter.getDeclaringClass() != null
-                            ? adapter.getDeclaringClass().getSimpleName() + "." + adapter.getSimpleName()
-                            : adapter.getSimpleName();
-                    if (c == String.class) {
-                        pc = "new " + n + "().unmarshal(doParseText())";
-                    } else if (model.contains(c)) {
-                        pc = "new " + n + "().unmarshal(doParse" + c.getSimpleName() + "())";
-                    } else {
-                        throw new UnsupportedOperationException(
-                                "Class " + clazz.getName() + " / member " + member + ": unsupported @XmlJavaTypeAdapter");
-                    }
-                    if (list && type.equals(
-                            new GenericType(((ParameterizedType) cl.getGenericSuperclass()).getActualTypeArguments()[1]))) {
-                        list = false;
-                    }
-                } else if (model.contains(root)) {
-                    pc = "doParse" + tn + "()";
-                } else if (root == String.class) {
-                    pc = "doParseText()";
-                } else {
-                    XmlAnyElement any = ((AccessibleObject) member).getAnnotation(XmlAnyElement.class);
-                    ExternalSchemaElement external = ((AccessibleObject) member).getAnnotation(ExternalSchemaElement.class);
-                    if (any != null && external != null) {
-                        // a case for external "namespace handler"
-                        externalNamespaces.add(new String[] { external.documentElement(), external.namespace(), gn, sn });
-                        return;
-                    } else {
-                        String n = root.getName();
-                        if (n.startsWith("java.lang.")) {
-                            n = tn;
-                        }
-                        pc = n + ".valueOf(doParseText())";
-                    }
-                }
-
-                // special for allowableValues
-                if ("allowableValues".equals(en)) {
-                    cases.put(en, list
-                            ? "doAddValues(" + pc + ", def." + gn + "(), def::" + sn + ");" : "def." + sn + "(" + pc + ");");
-                } else {
-                    cases.put(en,
-                            list ? "doAdd(" + pc + ", def." + gn + "(), def::" + sn + ");" : "def." + sn + "(" + pc + ");");
-                }
-            });
-            String expressionHandler = null;
-            for (Class<?> parent = clazz.getSuperclass(); parent != Object.class; parent = parent.getSuperclass()) {
-                if (getMembers(parent).stream()
-                        .anyMatch(member -> ((AccessibleObject) member).getAnnotation(XmlAttribute.class) == null
-                                && ((AccessibleObject) member).getAnnotation(XmlAnyAttribute.class) == null
-                                && ((AccessibleObject) member).getAnnotation(XmlValue.class) == null)) {
-                    expressionHandler = lowercase(parent.getSimpleName()) + "ElementHandler()";
-                    break;
-                }
-            }
-            if (expressionHandlersDefs.size() > 1) {
-                throw new IllegalStateException();
-            }
-            String externalElements = "";
-            if (!externalNamespaces.isEmpty()) {
-                boolean first = true;
-                StringBuilder sb = new StringBuilder();
-                for (String[] nn : externalNamespaces) {
-                    String gn = nn[2];
-                    String sn = nn[3];
-                    if (first) {
-                        sb.append("    if (\"").append(nn[1]).append("\".equals(parser.getNamespace())) {\n");
-                        first = false;
-                    } else {
-                        sb.append("    else if (\"").append(nn[1]).append("\".equals(parser.getNamespace())) {\n");
-                    }
-                    sb.append("        Element el = doParseDOMElement(\"").append(nn[0]).append("\", \"").append(nn[1])
-                            .append("\", def.").append(gn).append("());\n");
-                    sb.append("        if (el != null) {\n");
-                    sb.append("            doAddElement(el, def.").append(gn).append("(), def::").append(sn).append(");\n");
-                    sb.append("            return true;\n");
-                    sb.append("        }\n");
-                    sb.append("        return false;\n");
-                    sb.append("    }\n");
-                }
-                externalElements = sb.toString();
-            }
-            String elements;
-            if (cases.isEmpty()) {
-                if (expressionHandlersDefs.isEmpty()) {
-                    elements = (expressionHandler == null ? " noElementHandler()" : " " + expressionHandler);
-                } else {
-                    elements = " (def, key) -> {\n" + expressionHandlersDefs.values().iterator().next() + "    return "
-                               + (expressionHandler == null ? "false" : expressionHandler + ".accept(def, key)") + ";\n" + "}";
-                }
-            } else {
-                String returnClause
-                        = (expressionHandlersDefs.isEmpty() ? "" : expressionHandlersDefs.values().iterator().next() + "    ")
-                          + (expressionHandler == null
-                                  ? "return false;" : "return " + expressionHandler + ".accept(def, key);");
-                if (cases.size() == 1) {
-                    Map.Entry<String, String> entry = cases.entrySet().iterator().next();
-                    elements = " (def, key) -> {\n" + externalElements + "    if (\"" + entry.getKey() + "\".equals(key)) {\n"
-                               + "        " + entry.getValue() + "\n" + "        return true;\n"
-                               + "    }\n" + "    " + returnClause + "\n" + "}";
-                } else {
-                    StringBuilder sb = new StringBuilder();
-                    sb.append(" (def, key) -> {\n").append(externalElements).append("    switch (key) {\n");
-                    for (Map.Entry<String, String> entry : cases.entrySet()) {
-                        sb.append("        case \"").append(entry.getKey()).append("\": ").append(entry.getValue())
-                                .append(" break;\n");
-                    }
-                    sb.append("        default: ");
-                    if (expressionHandlersDefs.isEmpty()) {
-                        sb.append(returnClause);
-                    } else {
-                        Stream.of(returnClause.split("\n")).forEach(s -> sb.append("\n        ").append(s));
-                    }
-                    sb.append("\n");
-                    sb.append("    }\n").append("    return true;\n").append("}");
-                    elements = sb.toString();
-                }
-            }
-
-            // @XmlValue
-            String value = members.stream().filter(member -> ((AccessibleObject) member).getAnnotation(XmlValue.class) != null)
-                    .findFirst().map(member -> {
-                        String fn = member.getName();
-                        String sn = member instanceof Method ? fn : "set" + uppercase(fn);
-                        if (expressionDefinitionClass.isAssignableFrom(member.getDeclaringClass())) {
-                            return " expressionDefinitionValueHandler()";
-                        } else {
-                            return " (def, val) -> def." + sn + "(val)";
-                        }
-                    }).orElseGet(() -> {
-                        for (Class<?> parent = clazz.getSuperclass(); parent != Object.class; parent = parent.getSuperclass()) {
-                            if (getMembers(parent).stream()
-                                    .anyMatch(member -> ((AccessibleObject) member).getAnnotation(XmlValue.class) != null)) {
-                                return " " + lowercase(parent.getSimpleName()) + "ValueHandler()";
-                            }
-                        }
-                        return " noValueHandler()";
-                    });
-
-            if (clazz == beansDefinitionClass || clazz == applicationDefinitionClass) {
-                // for beans/camel we want public methods to be invoked by camel-xml-io-dsl
-
-                parser.addMethod().setPublic()
-                        .setReturnType(new GenericType(Optional.class, new GenericType(clazz)))
-                        .setName("parse" + name)
-                        .addThrows(IOException.class)
-                        .addThrows(XML_PULL_PARSER_EXCEPTION)
-                        .setBody(
-                                String.format("String tag = getNextTag(\"%s\", \"%s\", \"%s\");", "beans", "blueprint",
-                                        "camel"),
-                                "if (tag != null) {",
-                                String.format("    return Optional.of(doParse%s());", name),
-                                "}",
-                                "return Optional.empty();");
-            }
-
-            if (clazz == routesDefinitionClass || clazz == routeTemplatesDefinitionClass
-                    || clazz == templatedRoutesDefinitionClass || clazz == restsDefinitionClass
-                    || clazz == routeConfigurationsDefinitionClass) {
-
-                // for routes/rests/routeTemplates we want to support single-mode as well, this means
-                // we check that the tag name is either plural or singular and parse accordingly
-
-                String element = clazz.getAnnotation(XmlRootElement.class).name();
-                String capitalElement = Character.toUpperCase(element.charAt(0)) + element.substring(1);
-                String singleElement = element.endsWith("s") ? element.substring(0, element.length() - 1) : element;
-                String singleName = name.replace("sDefinition", "Definition");
-
-                parser.addMethod().setPublic()
-                        .setReturnType(new GenericType(Optional.class, new GenericType(clazz)))
-                        .setName("parse" + name)
-                        .addThrows(IOException.class)
-                        .addThrows(XML_PULL_PARSER_EXCEPTION)
-                        .setBody(String.format("String tag = getNextTag(\"%s\", \"%s\");", element, singleElement),
-                                "if (tag != null) {",
-                                "    switch (tag) {",
-                                String.format("        case \"%s\" : return Optional.of(doParse%s());", element, name),
-                                String.format("        case \"%s\" : return parseSingle%s();", singleElement, name),
-                                "    }",
-                                "}",
-                                "return Optional.empty();");
-
-                parser.addMethod().setPrivate()
-                        .setReturnType(new GenericType(Optional.class, new GenericType(clazz)))
-                        .setName("parseSingle" + name)
-                        .addThrows(IOException.class)
-                        .addThrows(XML_PULL_PARSER_EXCEPTION)
-                        .setBody(String.format("Optional<%s> single = Optional.of(doParse%s());", singleName, singleName),
-                                "if (single.isPresent()) {",
-                                String.format("    List<%s> list = new ArrayList<>();", singleName),
-                                "    list.add(single.get());",
-                                String.format("    %s def = new %s();", name, name),
-                                String.format("    def.set%s(list);", capitalElement),
-                                "    return Optional.of(def);",
-                                "}",
-                                "return Optional.empty();");
-            }
-
-            if (hasDerived) {
-                if (!attributeMembers.isEmpty()) {
-                    parser.addMethod()
-                            .setSignature("protected <T extends " + qname + "> AttributeHandler<T> " + lowercase(name)
-                                          + "AttributeHandler()")
-                            .setBody("return" + attributes + ";");
-                }
-                if (!elementMembers.isEmpty()) {
-                    parser.addMethod()
-                            .setSignature("protected <T extends " + qname + "> ElementHandler<T> " + lowercase(name)
-                                          + "ElementHandler()")
-                            .setBody("return" + elements + ";");
-                }
-                if (!Modifier.isAbstract(clazz.getModifiers())) {
-                    if (externalNamespaces.isEmpty()) {
-                        parser.addMethod()
-                                .setSignature("protected " + qname + " doParse" + name
-                                              + "() throws IOException, XmlPullParserException")
-                                .setBody("return doParse(new " + qname + "(), "
-                                         + (attributeMembers.isEmpty() ? attributes : lowercase(name) + "AttributeHandler()")
-                                         + ", "
-                                         + (elementMembers.isEmpty() ? elements : lowercase(name) + "ElementHandler()") + ","
-                                         + value + ");\n");
-                    } else {
-                        parser.addMethod()
-                                .setSignature("protected " + qname + " doParse" + name
-                                              + "() throws IOException, XmlPullParserException")
-                                .setBody("return doParse(new " + qname + "(), "
-                                         + (attributeMembers.isEmpty() ? attributes : lowercase(name) + "AttributeHandler()")
-                                         + ", "
-                                         + (elementMembers.isEmpty() ? elements : lowercase(name) + "ElementHandler()") + ","
-                                         + value + ", true);\n");
-                    }
-                }
-            } else {
-                // special for value definition
-                if ("ValueDefinition".equals(name)) {
-                    parser.addMethod()
-                            .setSignature("protected List<" + qname + "> doParse" + name
-                                          + "() throws IOException, XmlPullParserException")
-                            .setBody("return doParseValue(() -> new " + qname + "()" + "," + value + ");\n");
-                } else {
-                    parser.addMethod()
-                            .setSignature(
-                                    "protected " + qname + " doParse" + name + "() throws IOException, XmlPullParserException")
-                            .setBody(
-                                    "return doParse(new " + qname + "()," + attributes + "," + elements + "," + value + ");\n");
-                }
-            }
-        }
-
-        for (Class<?> root : elementRefs) {
-            parser.addMethod()
-                    .setSignature("protected " + root.getSimpleName() + " doParse" + root.getSimpleName()
-                                  + "Ref(String key) throws IOException, XmlPullParserException")
-                    .setBody("switch (key) {\n" + model.stream().filter(root::isAssignableFrom)
-                            .filter(cl -> cl.getAnnotation(XmlRootElement.class) != null).map(cl -> {
-                                String en = cl.getAnnotation(XmlRootElement.class).name();
-                                if ("##default".equals(en)) {
-                                    en = lowercase(cl.getSimpleName());
-                                }
-                                String tn = cl.getSimpleName();
-                                return "    case \"" + en + "\": return doParse" + tn + "();\n";
-                            }).collect(Collectors.joining()) + "    default: return null;\n" + "}");
-        }
-
-        return parser;
-    }
-
-    private String generateCases(SortedMap<String, String> cases, String defaultCase) {
-        String attributes;
-        StringBuilder sb = new StringBuilder();
-        sb.append(" (def, key, val) -> {\n").append("    switch (key) {\n");
-        for (Map.Entry<String, String> entry : cases.entrySet()) {
-            sb.append("        case \"")
-                    .append(entry.getKey())
-                    .append("\": ")
-                    .append(entry.getValue())
-                    .append(" break;\n");
-        }
-        sb.append("        default: return ")
-                .append(defaultCase)
-                .append(";\n" + "    }\n")
-                .append("    return true;\n")
-                .append("}");
-        attributes = sb.toString();
-        return attributes;
-    }
-
-    private String conversion(JavaClass parser, GenericType type, String val, String clazzName) {
-        Class<?> rawClass = type.getRawClass();
-        if (rawClass == String.class) {
-            return val;
-        } else if (rawClass.isEnum() || rawClass == Integer.class || rawClass == Long.class || rawClass == Boolean.class
-                || rawClass == Float.class) {
-            parser.addImport(rawClass);
-            return rawClass.getSimpleName() + ".valueOf(" + val + ")";
-        } else if (rawClass == List.class && type.getActualTypeArgument(0).getRawClass() == String.class) {
-            return "asStringList(" + val + ")";
-        } else if (rawClass == Set.class && type.getActualTypeArgument(0).getRawClass() == String.class) {
-            return "asStringSet(" + val + ")";
-        } else if (rawClass == Class.class) {
-            return "asClass(" + val + ")";
-        } else if (rawClass == Class[].class) {
-            return "asClassArray(" + val + ")";
-        } else if (rawClass == byte[].class) {
-            return "asByteArray(" + val + ")";
-        } else {
-            throw new UnsupportedOperationException("Unsupported type " + rawClass.getSimpleName() + " in class " + clazzName);
-        }
-    }
-
-    private List<Member> getMembers(Class<?> clazz) {
-        List<Member> members = Stream.concat(findFieldsForClass(clazz), findMethodsForClass(clazz))
-                .filter(m -> ((AnnotatedElement) m).getAnnotation(XmlTransient.class) == null)
-                .sorted(Comparator
-                        .comparing(member -> member instanceof Method ? propname(member.getName()) : member.getName()))
-                .collect(Collectors.toList());
-        if (clazz != outputDefinitionClass && outputDefinitionClass.isAssignableFrom(clazz)) {
-            members.removeIf(m -> "setOutputs".equals(m.getName()));
-        }
-        return members;
     }
 
     private Stream<? extends Member> findMethodsForClass(Class<?> c) {
@@ -813,16 +211,234 @@ public class ModelXmlParserGeneratorMojo extends AbstractGeneratorMojo {
         }
     }
 
-    private String lowercase(String fn) {
+    public TreeMap<String, String> newTreeMap() {
+        return new TreeMap<>();
+    }
+
+    public String lowercase(String fn) {
         return fn.substring(0, 1).toLowerCase() + fn.substring(1);
     }
 
-    private String uppercase(String fn) {
+    public String uppercase(String fn) {
         return fn.substring(0, 1).toUpperCase() + fn.substring(1);
     }
 
-    private String propname(String name) {
-        return lowercase(name.substring(3));
+    public void failure(String message) {
+        throw new RuntimeException(message);
     }
 
+    public ClassWrapper wrap(Class<?> clazz) {
+        return new ClassWrapper(clazz);
+    }
+
+    public class ClassWrapper {
+        private final Class<?> clazz;
+
+        public ClassWrapper(Class<?> clazz) {
+            this.clazz = clazz;
+        }
+
+        public String getName() {
+            return clazz.getName();
+        }
+
+        public String getSimpleName() {
+            return clazz.getSimpleName();
+        }
+
+        public String getPackageName() {
+            return clazz.getPackageName();
+        }
+
+        public ClassWrapper getSuperclass() {
+            return clazz.getSuperclass() != null ? new ClassWrapper(clazz.getSuperclass()) : null;
+        }
+
+        public boolean isAssignableFrom(ClassWrapper wrapper) {
+            return clazz.isAssignableFrom(wrapper.clazz);
+        }
+
+        public GenericType getSuperclassType() {
+            return clazz.getGenericSuperclass() != null ? new GenericType(clazz.getGenericSuperclass()) : null;
+        }
+
+        public boolean isInterface() {
+            return clazz.isInterface();
+        }
+
+        public boolean isAbstract() {
+            return Modifier.isAbstract(clazz.getModifiers());
+        }
+
+        public XmlEnum getXmlEnum() {
+            return ((AnnotatedElement) clazz).getAnnotation(XmlEnum.class);
+        }
+
+        public XmlRootElement getXmlRootElement() {
+            return ((AnnotatedElement) clazz).getAnnotation(XmlRootElement.class);
+        }
+
+        public List<MemberWrapper> getAttributes() {
+            return getMembers()
+                    .filter(m -> m.getXmlAttribute() != null)
+                    .sorted(Comparator.comparing(MemberWrapper::getName))
+                    .toList();
+        }
+
+        public List<MemberWrapper> getElements() {
+            return getMembers()
+                    .filter(m -> m.getXmlAttribute() == null && m.getXmlAnyAttribute() == null && m.getXmlValue() == null)
+                    .sorted(Comparator.comparing(MemberWrapper::getName))
+                    .toList();
+        }
+
+        public Optional<MemberWrapper> getValue() {
+            return getMembers()
+                    .filter(m -> m.getXmlValue() != null)
+                    .findAny();
+        }
+
+        private Stream<MemberWrapper> getMembers() {
+            return Stream.concat(findFieldsForClass(clazz), findMethodsForClass(clazz))
+                    .map(MemberWrapper::new)
+                    .filter(m -> clazz == outputDefinitionClass
+                            || !outputDefinitionClass.isAssignableFrom(clazz)
+                            || !m.member.getName().equals("setOutputs"));
+        }
+
+        public List<ClassWrapper> getClassAndSuper() {
+            return doGetClassAndSuper().toList();
+        }
+
+        private Stream<ClassWrapper> doGetClassAndSuper() {
+            return clazz != Object.class && clazz != null
+                    ? Stream.concat(Stream.of(this), getSuperclass().doGetClassAndSuper())
+                    : Stream.empty();
+        }
+
+        public Class<?> getWrappedClass() {
+            return clazz;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o)
+                return true;
+            if (o == null || getClass() != o.getClass())
+                return false;
+            ClassWrapper that = (ClassWrapper) o;
+            return Objects.equals(clazz, that.clazz);
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(clazz);
+        }
+    }
+
+    public class MemberWrapper {
+        private final Member member;
+
+        public MemberWrapper(Member member) {
+            this.member = member;
+        }
+
+        public ClassWrapper getDeclaringClass() {
+            return new ClassWrapper(member.getDeclaringClass());
+        }
+
+        public XmlAttribute getXmlAttribute() {
+            return ((AnnotatedElement) member).getAnnotation(XmlAttribute.class);
+        }
+
+        public XmlAnyAttribute getXmlAnyAttribute() {
+            return ((AnnotatedElement) member).getAnnotation(XmlAnyAttribute.class);
+        }
+
+        public XmlValue getXmlValue() {
+            return ((AnnotatedElement) member).getAnnotation(XmlValue.class);
+        }
+
+        public XmlTransient getXmlTransient() {
+            return ((AnnotatedElement) member).getAnnotation(XmlTransient.class);
+        }
+
+        public XmlElementRef getXmlElementRef() {
+            return ((AnnotatedElement) member).getAnnotation(XmlElementRef.class);
+        }
+
+        public XmlElements getXmlElements() {
+            return ((AnnotatedElement) member).getAnnotation(XmlElements.class);
+        }
+
+        public XmlElement getXmlElement() {
+            return ((AnnotatedElement) member).getAnnotation(XmlElement.class);
+        }
+
+        public XmlElementWrapper getXmlElementWrapper() {
+            return ((AnnotatedElement) member).getAnnotation(XmlElementWrapper.class);
+        }
+
+        public XmlJavaTypeAdapter getXmlJavaTypeAdapter() {
+            return ((AnnotatedElement) member).getAnnotation(XmlJavaTypeAdapter.class);
+        }
+
+        public XmlAnyElement getXmlAnyElement() {
+            return ((AnnotatedElement) member).getAnnotation(XmlAnyElement.class);
+        }
+
+        public ExternalSchemaElement getExternalSchemaElement() {
+            return ((AnnotatedElement) member).getAnnotation(ExternalSchemaElement.class);
+        }
+
+        public GenericType getType() {
+            return new GenericType(
+                    member instanceof Method
+                            ? ((Method) member).getGenericParameterTypes()[0] : ((Field) member).getGenericType());
+        }
+
+        public String getName() {
+            String name = null;
+            XmlAttribute attr = getXmlAttribute();
+            if (attr != null) {
+                String aname = attr.name();
+                if (!"##default".equals(aname)) {
+                    name = aname;
+                }
+            }
+            if (name == null) {
+                String mn = member.getName();
+                if (member instanceof Method) {
+                    name = lowercase(mn.substring(3));
+                } else {
+                    name = mn;
+                }
+            }
+            return name;
+        }
+
+        public String getSetter() {
+            String mn = member.getName();
+            return member instanceof Method ? mn : "set" + uppercase(mn);
+        }
+
+        public String getGetter() {
+            return "g" + getSetter().substring(1);
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o)
+                return true;
+            if (o == null || getClass() != o.getClass())
+                return false;
+            MemberWrapper that = (MemberWrapper) o;
+            return Objects.equals(member, that.member);
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(member);
+        }
+    }
 }
